syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";

import "google/protobuf/empty.proto";
import "auth.proto";

service RoleService {
  // User
  rpc CreateRole(Role) returns (Role) {}
  rpc GetUser(GetRoleReq) returns (Role) {}
  rpc GetUserList(GetRoleListReq) returns (GetRoleListRes) {}
  rpc UpdateUser(Role) returns (Role) {}
  rpc DeleteUser(DeleteRoleReq) returns (google.protobuf.Empty) {}
}

message GetRoleReq {
  string id = 1;
}

message GetRoleListReq {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
  string user_id = 4;
  repeated string role_types = 5;
  string journal_id = 6;
}

message GetRoleListRes {
  repeated Role roles = 1;
  int32 count = 2;
}

message DeleteRoleReq {
  string id = 1;
}
